Fix: Adjust screen to handle textContent overflow

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body,
     margin: 10px;
     font-size: 50px;
     color: white;
-    max-width: 300px;
+    overflow: hidden;
 }
 .buttons {
     display: flex;
